[package]
name = "rust-raytracer-wasm"
version = "0.1.0"
authors = ["parbo <par.bohrarper@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2.22"
js-sys = "0.2.7"
#rust-raytracer = { path = "../rust-raytracer" }
rust-raytracer = { git = "https://github.com/parbo/rust-raytracer" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
